Unification of the HttpChannelConsumer with more comprehenive tests.